fix text-align moduleoverview

--- a/css/_moduleoverview.scss
+++ b/css/_moduleoverview.scss
@@ -73,6 +73,7 @@ div.div--segLinks {
 div.div--progressDisplay {
   background-color: transparent;
   padding: 10px 0;
+  text-align: left;
   p {
     font-size: 1.1em;
     color: white;
